# distributed-mps

distributed-fs/: Cargo.toml  README.md  membership  metadata
distributed-fs/files/: linux
distributed-fs/src/: client.rs  datanode.rs  heartbeat.rs  lib.rs  master.rs
distributed-grep/: Cargo.toml  README.md  heartbeat.now
distributed-grep/common/: utils.rs
distributed-grep/src/: tests.rs
map-reduce/: Cargo.toml  README.md
map-reduce/logger/: Cargo.toml  log4rs.yml
map-reduce/logger/src/: client.rs  lib.rs  server.rs
map-reduce/mj/: Cargo.toml
map-reduce/mj/src/: client.rs  heartbeat.rs  leader.rs  lib.rs  worker.rs
map-reduce/sdfs/: Cargo.toml
map-reduce/sdfs/src/: client.rs  datanode.rs  heartbeat.rs  interface.rs  lib.rs  master.rs
map-reduce/test1/: Cargo.toml
map-reduce/test1/src/: map1.rs  mapi.rs  reduce1.rs  reduce2.rs  sql_filter.rs
membership-list/: Cargo.toml  README.md  self_hostname.txt  self_logname.txt
membership-list/src/: lib.rs
