[package]
name = "mp1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "common/utils.rs"

[dependencies]
rand = "0.8"

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "generate_test_logs"
